# Graphic-Sandbox

./: .gitignore  CMakeLists.txt  README.md  TOREAD.md
cmake/: FetchDeps.cmake  Glad.cmake
include/Camera/: FlyCamera.h  ICamera.h  todo.md
include/Core/: Application.h  Window.h
include/Demo/: DemoBase.h  DemoManager.h
include/Demos/: ComputeDemo.h  HexCarvingDemo.h  HexMappingDemo.h  LatticeDemo.h  MeshDualDemo.h  MeshDualSmoothDemo.h  SDFLatticeDemo.h  StructuralLatticeDemo.h  TPMSDemo.h  TriangleDemo.h  VoronoiLatticeDemo.h  VoronoiSpongeDemo.h  VoronoiWireframeDemo.h
include/Geometry/: ConvexPolytope.h  IcoSphere.h  MarchingCubes.h  MeshRenderer.h  Primitives.h
include/Graphics/: ComputeShader.h  DebugDraw.h  Renderer.h  Shader.h  ShaderHotReload.h
include/ImGui/: ImGuiLayer.h  PerformancePanel.h
include/Util/: GLog.h  Timer.h
shaders/Demos/compute/: compute.comp  fullscreen.frag  fullscreen.vert
shaders/Demos/lattice/: lattice.frag  lattice.vert
shaders/Demos/sdf_lattice/: sdf_lattice.frag  (+1 more)
src/: main.cpp
src/Camera/: FlyCamera.cpp
src/Core/: Application.cpp  Window.cpp
src/Demo/: DemoManager.cpp
src/Demos/: ComputeDemo.cpp  HexCarvingDemo.cpp  HexMappingDemo.cpp  LatticeDemo.cpp  MeshDualDemo.cpp  MeshDualSmoothDemo.cpp  SDFLatticeDemo.cpp  StructuralLatticeDemo.cpp  TPMSDemo.cpp  TriangleDemo.cpp  VoronoiLatticeDemo.cpp  VoronoiSpongeDemo.cpp  VoronoiWireframeDemo.cpp
src/Geometry/: ConvexPolytope.cpp  IcoSphere.cpp  MarchingCubes.cpp  MeshRenderer.cpp  Primitives.cpp
src/Graphics/: ComputeShader.cpp  DebugDraw.cpp  Renderer.cpp  Shader.cpp  ShaderHotReload.cpp
src/ImGui/: ImGuiLayer.cpp  PerformancePanel.cpp
src/Util/: Timer.cpp
(+14 files in other folders)
